--- a/Octamux/personal/index.html
+++ b/Octamux/personal/index.html
@@ -74,7 +74,7 @@
 			<!-- start banner Area -->
 			<section class="banner-area">
 				<div class="container">
-					<div class="row fullscreen align-items-center justify-content-between">
+					<!--<div class="row fullscreen align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 banner-left">
 							<h6>This is me</h6>
 							<h1>Philip Gilbert</h1>
@@ -86,7 +86,7 @@
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 							<img class="img-fluid" src="img/hero-img.png" alt="">
 						</div>
-					</div>
+					</div>-->
 				</div>					
 			</section>
 			<!-- End banner Area -->
@@ -94,7 +94,7 @@
 			<!-- Start home-about Area -->
 			<section class="home-about-area pt-120">
 				<div class="container">
-					<div class="row align-items-center justify-content-between">
+					<!--<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
 							<img class="img-fluid" src="img/about-img.png" alt="">
 						</div>
@@ -106,7 +106,7 @@
 							</p>
 							<a href="#" class="primary-btn text-uppercase">View Full Details</a>
 						</div>
-					</div>
+					</div>-->
 				</div>	
 			</section>
 			<!-- End home-about Area -->
@@ -386,7 +386,7 @@
 		
 			<!-- Start price Area -->
 			<section class="price-area section-gap">
-				<div class="container">
+				<!--<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
@@ -469,7 +469,7 @@
 							</div>
 						</div>																		
 					</div>
-				</div>	
+				</div>-->	
 			</section>
 			<!-- End price Area -->			
 	
@@ -562,8 +562,8 @@
 			<!-- end recent-blog Area -->		
 
 		    <!-- Start brands Area -->
-		    <section class="brands-area">
-		        <div class="container">
+		    <!--<section class="brands-area">-->
+		        <!--<div class="container">
 		            <div class="brand-wrap">
 		                <div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
 		                    <div class="col single-brand">
@@ -583,8 +583,8 @@
 		                    </div>
 		                </div>
 		            </div>
-		        </div>
-		    </section>
+		        </div>-->
+		    <!--</section>-->
 		    <!-- End brands Area -->			
 
             <!-- start footer Area -->
