--- a/Octamux/personal/services.html
+++ b/Octamux/personal/services.html
@@ -366,7 +366,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </footer>
             <!-- End footer Area -->		
 
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
+            <script src="js/vendor/jquery-2.2.4.min.js"></script>
+            <script src="js/jquery.magnific-popup.min.js"></script>
+            <script src="js/simple-skillbar.js"></script>
+            <script src="js/isotope.pkgd.min.js"></script>
+            <script src="js/superfish.min.js"></script>
+            <script src="js/owl.carousel.min.js"></script>
+            <script src="js/main.js"></script>	
+
+			<!--<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="js/popper.min.js"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>			
@@ -383,6 +391,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/simple-skillbar.js"></script>							
 			<script src="js/owl.carousel.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
+			<script src="js/main.js"></script>-->	
 		</body>
 	</html>
