--- a/Octamux/personal/index.html
+++ b/Octamux/personal/index.html
@@ -639,7 +639,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             <!-- End footer Area -->		
 
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
+            <script src="js/jquery.magnific-popup.min.js"></script>	
+            <script src="js/simple-skillbar.js"></script>			
+            <script src="js/isotope.pkgd.min.js"></script>	
+            <script src="js/superfish.min.js"></script>		
+            <script src="js/owl.carousel.min.js"></script>
+            <script src="js/main.js"></script>	
+			<!--<script src="js/popper.min.js"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>			
   			<script src="js/easing.min.js"></script>			
@@ -654,7 +660,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/jquery.counterup.min.js"></script>
 			<script src="js/simple-skillbar.js"></script>							
 			<script src="js/owl.carousel.min.js"></script>							
-			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
+			<script src="js/mail-script.js"></script>-->	
+			
 		</body>
 	</html>
