--- a/Octamux/personal/about.html
+++ b/Octamux/personal/about.html
@@ -259,7 +259,7 @@
 		    <!-- End testimonial Area -->			
 
 		    <!-- Start brands Area -->
-		    <section class="brands-area">
+		    <!--<section class="brands-area">
 		        <div class="container">
 		            <div class="brand-wrap">
 		                <div class="row align-items-center active-brand-carusel justify-content-start no-gutters">
@@ -281,7 +281,7 @@
 		                </div>
 		            </div>
 		        </div>
-		    </section>
+		    </section>-->
 		    <!-- End brands Area -->	
 
             <!-- start footer Area -->
