--- a/Octamux/personal/services.html
+++ b/Octamux/personal/services.html
@@ -159,7 +159,7 @@
 			<!-- End services Area -->				
 
 			<!-- Start fact Area -->
-			<section class="facts-area section-gap" id="facts-area">
+			<!--<section class="facts-area section-gap" id="facts-area">
 				<div class="container">				
 					<div class="row">
 						<div class="col-lg-3 col-md-6 single-fact">
@@ -180,12 +180,12 @@
 						</div>												
 					</div>
 				</div>	
-			</section>
+			</section>-->
 			<!-- end fact Area -->				
 
 			<!-- Start price Area -->
 			<section class="price-area section-gap">
-				<div class="container">
+				<!--<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-70 col-lg-8">
 							<div class="title text-center">
@@ -268,7 +268,7 @@
 							</div>
 						</div>																		
 					</div>
-				</div>	
+				</div>-->	
 			</section>
 			<!-- End price Area -->			
 
