--- a/Octamux/personal/index.html
+++ b/Octamux/personal/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="zxx" class="no-js">
 <head>
     <!-- Mobile Specific Meta -->
@@ -45,15 +46,13 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>                        
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav><!-- #nav-menu-container -->
             </div>
         </div>
     </header>
     <!-- #header -->
-
-
     <!-- Start services Area -->
     <section class="services-area section-gap">
         <div class="container">
@@ -71,7 +70,7 @@
                         <span class="lnr lnr-pie-chart"></span>
                         <a href="#"><h4>Web Design</h4></a>
                         <p>
-                            “It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”
+                            At Octamux, we offer a variety of web design services to help you build your online presence and get noticed. We can help you have a website design that will not only look great, but meet the needs of both you and your customers. We've been in business for more than twelve years and our clients know they can trust us for quality work and excellent support. Your goals are important to us, and we work with you to create the perfect custom website for every need.
                         </p>
                     </div>
                 </div>
@@ -80,45 +79,45 @@
                         <span class="lnr lnr-laptop-phone"></span>
                         <a href="#"><h4>Web Development</h4></a>
                         <p>
-                            If you are an entrepreneur, you know that your success cannot depend on the opinions of others. Like the wind, opinions.
+                            We provide end-to-end web development services to fulfill all your website requirements. Our industry-proven web design services will breathe more life into your website, because we make sure we deliver a product that is the optimal blend of visibility and usability. Our web development services help you gain competitive advantages by building websites that leverage evolving technologies and search engine visibility factors. Armed with expertise in online marketing and SEO techniques, we build attractive, fast loading, search engine optimized sites with easy and user friendly navigation that help you gain maximum traction with Search Engines and improve traffic and conversions.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <span class="lnr lnr-camera"></span>
-                        <a href="#"><h4>Photography</h4></a>
+                        <a href="#"><h4>MobileApp Development</h4></a>
                         <p>
-                            Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills.
+                            Our mobile development specialists create enterprise-grade apps that help our customers differentiate themselves in the market, generate new revenue streams and enhance productivity. Utilising agile delivery methods, our creative designers, architects and developers are industry leaders in their field, and possess the in-depth skills required to design, develop, integrate and deploy mobile apps on all industry leading platforms (iOS, Android, HTML5 & Hybrid). With specialist expertise in mobile banking, payments, back-end integration and digital health, our specialists create innovative, cutting-edge app solutions that will help your organisation realise its digital ambitions.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <span class="lnr lnr-picture"></span>
-                        <a href="#"><h4>Clipping Path</h4></a>
+                        <a href="#"><h4>Sharepoint Services</h4></a>
                         <p>
-                            Hypnosis quit smoking methods maintain caused quite a stir in the medical world over the last two decades. There is a lot of argument.
+                            We offer genuine and innovative development, support and hosting services for Microsoft SharePoint. We have performed end-to-end SharePoint based implementations for many industry verticals including Insurance, Education, Retail, Manufacturing and Financial Services organizations.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single-services">
                         <span class="lnr lnr-tablet"></span>
-                        <a href="#"><h4>Apps Interface</h4></a>
+                        <a href="#"><h4>Office 365 Services</h4></a>
                         <p>
-                            Do you sometimes have the feeling that you’re running into the same obstacles over and over again? Many of my conflicts.
+                            Octamux provides Microsoft Office 365 migration, deployment, customization and ... We can also help you provide managed services including, but not limited to.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single-services">
+                    <!--<div class="single-services">
                         <span class="lnr lnr-rocket"></span>
-                        <a href="#"><h4>Graphic Design</h4></a>
+                        <a href="#"><h4>Graphic</h4></a>
                         <p>
                             You’ve heard the expression, “Just believe it and it will come.” Well, technically, that is true, however, ‘believing’ is not just thinking that.
                         </p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -155,12 +154,12 @@
                 <div class="menu-content pb-70 col-lg-8">
                     <div class="title text-center">
                         <h1 class="mb-10">Our Latest Featured Projects</h1>
-                        <p>Who are in extremely love with eco friendly system.</p>
+                        <!--<p>Who are in extremely love with eco friendly system.</p>-->
                     </div>
                 </div>
             </div>
 
-            <div class="filters">
+            <!--<div class="filters">
                 <ul>
                     <li class="active" data-filter="*">All</li>
                     <li data-filter=".vector">Vector</li>
@@ -168,7 +167,7 @@
                     <li data-filter=".ui">UI/UX</li>
                     <li data-filter=".printing">Printing</li>
                 </ul>
-            </div>
+            </div>-->
 
             <div class="filters-content">
                 <div class="row grid">
@@ -176,89 +175,91 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <img class="image img-fluid" src="img/p1.jpg" alt="">
+                                <a href="www.classigoo.com" class="img-pop-up">
+                                    <img class="image img-fluid" src="img/ClientLogos/Classigoo_Logox50.png" alt="">
+                                </a>
                             </div>
-                            <a href="img/p1.jpg" class="img-pop-up">
-                                <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-                                </div>
-                            </a>
+                            <!--<a href="www.classigoo.com" class="img-pop-up">-->
+                            <!--<div class="middle">
+                                <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+                            </div>-->
+                            <!--</a>-->
                         </div>
                         <div class="p-inner">
-                            <h4>2D Vinyl Design</h4>
-                            <div class="cat">vector</div>
+                            <!--<h4>2D Vinyl Design</h4>-->
+                            <div class="cat"><!--vector--></div>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all raster">
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <img class="image img-fluid" src="img/p2.jpg" alt="">
+                                <img class="image img-fluid" src="img/ClientLogos/All8bitMcu.PNG" alt="">
                             </div>
-                            <a href="img/p2.jpg" class="img-pop-up">
-                                <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-                                </div>
-                            </a>
+                            <!--<a href="img/p2.jpg" class="img-pop-up">-->
+                            <!--<div class="middle">
+                                <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+                            </div>-->
+                            <!--</a>-->
                         </div>
-                        <div class="p-inner">
+                        <!--<div class="p-inner">
                             <h4>2D Vinyl Design</h4>
                             <div class="cat">vector</div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="single-portfolio col-sm-4 all ui">
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <img class="image img-fluid" src="img/p3.jpg" alt="">
+                                <img class="image img-fluid" src="" alt="">
                             </div>
-                            <a href="img/p3.jpg" class="img-pop-up">
+                            <!--<a href="img/p3.jpg" class="img-pop-up">
                                 <div class="middle">
                                     <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
                                 </div>
-                            </a>
+                            </a>-->
 
                         </div>
                         <div class="p-inner">
-                            <h4>Creative Poster Design</h4>
-                            <div class="cat">Agency</div>
+                            <!--<h4>Creative Poster Design</h4>-->
+                            <div class="cat"><!--Agency--></div>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all printing">
                         <div class="relative">
-                            <div class="thumb">
+                            <!--<div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <img class="image img-fluid" src="img/p4.jpg" alt="">
-                            </div>
-                            <a href="img/p4.jpg" class="img-pop-up">
-                                <div class="middle">
+                                <img class="image img-fluid" src="img/ClientLogos/Classigoo_Logox50.png" alt="">
+                            </div>-->
+                            <a href="" class="img-pop-up">
+                                <!--<div class="middle">
                                     <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-                                </div>
+                                </div>-->
                             </a>
                         </div>
                         <div class="p-inner">
-                            <h4>Embosed Logo Design</h4>
-                            <div class="cat">Portal</div>
+                            <!--<h4>Embosed Logo Design</h4>-->
+                            <div class="cat"><!--Portal--></div>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all vector">
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <img class="image img-fluid" src="img/p5.jpg" alt="">
+                                <img class="image img-fluid" src="" alt="">
                             </div>
-                            <a href="img/p5.jpg" class="img-pop-up">
+                            <a href="" class="img-pop-up">
                                 <div class="middle">
                                     <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
                                 </div>
                             </a>
                         </div>
                         <div class="p-inner">
-                            <h4>3D Helmet Design</h4>
-                            <div class="cat">vector</div>
+                            <!--<h4>3D Helmet Design</h4>-->
+                            <div class="cat"><!--vector--></div>
                         </div>
                     </div>
-                    <div class="single-portfolio col-sm-4 all raster">
+                    <!--<div class="single-portfolio col-sm-4 all raster">
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
@@ -266,7 +267,7 @@
                             </div>
                             <a href="img/p6.jpg" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+                                    <div class="text align-self-center d-flex"><img src="" alt=""></div>
                                 </div>
                             </a>
                         </div>
@@ -274,7 +275,7 @@
                             <h4>2D Vinyl Design</h4>
                             <div class="cat">raster</div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
 
@@ -287,8 +288,8 @@
             <div class="row d-flex justify-content-center">
                 <div class="menu-content pb-70 col-lg-8">
                     <div class="title text-center">
-                        <h1 class="mb-10">Client’s Feedback About Me</h1>
-                        <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
+                        <h1 class="mb-10">Client’s Feedback About Us</h1>
+                        <!--<p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>-->
                     </div>
                 </div>
             </div>
@@ -300,10 +301,10 @@
                         </div>
                         <div class="desc">
                             <p>
-                                Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills, the bigger the payoff you.
+                                Working with Octamux always been a pleasure for me. They always surprise me with their exemplary development methodologies. They have expertise in offering quality app, web and software solutions at a very affordable price. At Octamux, the developers come with profound knowledge of distinct languages while their designers are skilled in the art of creating business specific and intuitive designs.
                             </p>
-                            <h4>Harriet Maxwell</h4>
-                            <p>CEO at Google</p>
+                            <h4>Nagaraju</h4>
+                            <p>CEO at Classigoo</p>
                         </div>
                     </div>
                     <div class="single-testimonial item d-flex flex-row">
@@ -312,10 +313,10 @@
                         </div>
                         <div class="desc">
                             <p>
-                                A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking cigarettes. However.
+                                One of the finest development agencies, Octamux offers par excellence services in development and delivers a business specific outcome. Octamux provides what it claims to their customers and that too with a difference. Initially, I got impressed with them for pricing the project fairly and they delivered what was promised. Apart from the skillful team taking care of my project, a dedicated resource was constantly in touch with me about the progress of the project.
                             </p>
-                            <h4>Carolyn Craig</h4>
-                            <p>CEO at Facebook</p>
+                            <h4>Suresh Vitry</h4>
+                            <p>CEO at All8bitmcu</p>
                         </div>
                     </div>
                 </div>
